Actualización en boleta.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Y vía un  botón de enviar. Hay que mostrar lo capturado
         <label accesskey="E">
           Boleta:<br>
           <input name="boleta" type="number" autofocus required
-                min="1111111111" max="999999999" step="1">
+                min="0" max="" step="1">
         </label>
         <br><em>Digite su boleta</em>
       </p>
