Actualización js y html.

--- a/index.html
+++ b/index.html
@@ -35,31 +35,28 @@ Y vía un  botón de enviar. Hay que mostrar lo capturado
           <input name="nombre" type="text" autofocus required>
         </label>
         <br><em>Digite su nombre.</em>
-        <br><output id="salidanombre"></output>
       </p>
       <p>
-        <label accesskey="R">
+        <label accesskey="F">
           Grupo:<br>
           <input name="grupo" type="text" autofocus required>
         </label>
         <br><em>Digite su grupo.</em>
-        <br><output id="salidagrupo"></output>
       </p>
       <p>
-        <label accesskey="R">
+        <label accesskey="G">
           Materia:<br>
           <input name="materia" type="text" autofocus required>
         </label>
         <br><em>Digite la materia.</em>
-        <br><output id="salidamataria"></output>
       </p>
       <p>
-        <label accesskey="R">
+        <label accesskey="H">
           Fecha:<br>
-          <input name="entero2" type="date" autofocus required>
+          <input name="fecha" type="date" autofocus required
+                 max="2022-01-24" min="2021-05-24">
         </label>
         <br><em>Selecciones la fecha actual</em>
-        <br><output id="salidafecha"></output>
       </p>
       <p><input type="submit" value="Enviar" accesskey="P"></p>
       <br>
